// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><problematic ids=\\"auto2\\" refid=\\"auto1\\">\`</problematic></paragraph><system_message ids=\\"auto1\\" backrefs=\\"auto2\\" line=\\"1\\"><paragraph>Inline interpreted text or phrase reference start-string without end-string.</paragraph></system_message></document>"
`;

exports[`Emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis and inline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> and <strong>goodbye</strong></paragraph></document>"
`;

exports[`Emphasis followed by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><emphasis>hello</emphasis> test</paragraph></document>"
`;

exports[`Emphasis preceded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis surrounded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>stuff <emphasis>hello</emphasis> things</paragraph></document>"
`;

exports[`Inline followed by emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong> and <emphasis>goodbye</emphasis></paragraph></document>"
`;

exports[`Random 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><bullet_list bullet=\\"*\\"><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Random 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph>Test.
Test2
Test3
-----</paragraph></document>"
`;

exports[`Random 2 2`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<paragraph>Test.
Test2
Test3
-----</paragraph></document>"
`;

exports[`Random 4 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<section names=\\"Test3\\">
<title>Test3</title><paragraph>This is a test.</paragraph><bullet_list bullet=\\"*\\"><list_item><paragraph>BUllet list 1</paragraph></list_item></bullet_list><bullet_list bullet=\\"*\\"><list_item><paragraph>The emacs rst editor is weird.</paragraph></list_item></bullet_list></section></document>"
`;

exports[`Strong 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"True\\">
<paragraph><strong>hello</strong></paragraph></document>"
`;

exports[`Title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document>
<section names=\\"Title\\">
<title>Title</title><paragraph>Paragraph.</paragraph></section></document>"
`;
